cloud manager compilation error